Changed the story of recipes from food to graffiti

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My recipes</title>
+        <title>Recipes from street culture!</title>
         <meta charset="UTF-8"/>
     </head>
     
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <h1 id="header">Recipes from street culture!</h1>
+        <img src="images/street.jpg" alt="a talented artist" style="width: 400px;height: 200px;">
+        <div>
+            <a href="recipes/tag.html">Tag</a><br>
+            <a href="recipes/throw.html">Throw</a><br>
+            <a href="recipes/piece.html">Piece</a>
+        </div>
     </body>
 </html>
