That's it for me.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Recipes from street culture!</title>
+        <title>Recipes from graffiti street culture!</title>
         <meta charset="UTF-8"/>
     </head>
     
     <body>
-        <h1 id="header">Recipes from street culture!</h1>
+        <h1 id="header">Graffiti recipes for OG's</h1>
         <img src="images/street.jpg" alt="a talented artist" style="width: 400px;height: 200px;">
         <div>
             <a href="recipes/tag.html">Tag</a><br>
