--- a/recipes/piece.html
+++ b/recipes/piece.html
@@ -8,5 +8,28 @@
     <body>
         <h1 id="header">Piece</h1>
         <img src="../images/piece.jpg" alt="a completed work of art" style="width: 400px;height: 200px;">
+        <p>Now listen kid. You'll start doing pieces when you have your game down. By down i mean you know what you're doing. No rookie mistakes anymore.
+            You should be breathing graffiti. You'll start by sketching your graffiti piece on a piece of paper. Study your letters and colors.
+            <p>Get this stuff:
+                <ul>
+                    <li>4-5 different color spraycans</li>
+                    <li>Different caps</li>
+                    <li>Backpack/bag</li>
+                    <li>Friend for a lookout</li>
+                </ul>
+            </p>
+            <p>Proceed by going to your spot that you observed before. Watch over your shoulders and have a friend to lookout for you.
+                    <ol>
+                        <li>Start by doing the outlines</li>
+                        <li>Fill in with different colors and gradients</li>
+                        <li>Good steady outline with 3d or a shadow</li>
+                        <li>Funky outlines</li>
+                        <li>Fancy highlights</li>
+                        <li>Finish with a good handstyle of your name</li>
+                    </ol>
+            </p>
+        </p>
+
+        <br><a href="../index.html">Return to main page</a>
     </body>
 </html>
