--- a/recipes/tag.html
+++ b/recipes/tag.html
@@ -6,7 +6,19 @@
     </head>
     
     <body>
-        <h1 id="header">Tag</h1>
+        <h1 id="header">Tag!</h1>
         <img src="../images/tag.jpg" alt="a talented artist" style="width: 400px;height: 200px;">
+        <h3>How to do a tag!</h3>
+        <p>First you need to get your handstyle down on paper. You must practice a lot, kid.
+            Make sure your letters look good. When you're ready you can get on the streets. But be careful, it's better for you to do it at nighttime.
+        </p>
+        <p>What you'll need:
+            <ul>
+                <li>Some sort of a marker or a spraycan</li>
+                <li>Black hoodie</li>
+                <li>Cojones</li>
+            </ul>
+        </p>
+        <a href="../index.html">Return to main page</a>
     </body>
 </html>
