--- a/recipes/throw.html
+++ b/recipes/throw.html
@@ -6,7 +6,22 @@
     </head>
     
     <body>
-        <h1 id="header">Throw</h1>
+        <h1 id="header">Throwup!</h1>
         <img src="../images/throw.jpg" alt="a violation of rules" style="width: 400px;height: 200px;">
+        <h3>Throwup, but don't puke!</h3>
+        <p>Now this is a little bit more serious than just a stupid tag. For a throwup you'll need some skills and bigger cojones, because adrenaline might kick in.
+             There's a lot of kids doing toyish throwups. But this shit is the fundament of graffiti. <strong>Get your game straight!</strong>
+        </p>
+        <p>For a throwup you'll need:
+            <ol>
+                <li>Chrome spraycan</li>
+                <li>Black spraycan</li>
+                <li>Fatcap & NY cap</li>
+            </ol>
+        </p>
+        <p>Now find yourself some dirty old abandoned wall and start by doing the outline of your throwup with Chrome. Fill in the outlines with a Fatcap. Finish with a black outline and some shadows.
+             If you're feeling frisky you can even add some white highlights.</p>
+             <p>That's it kid. You Rock!</p>
+        <br><a href="../index.html">Return to main page</a>
     </body>
 </html>
