--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <head>
         <title>Recipes from graffiti street culture!</title>
         <meta charset="UTF-8"/>
+        <link rel="stylesheet" href="index.css"/>
     </head>
     
     <body>
         <h1 id="header">Graffiti recipes for OG's</h1>
-        <img src="images/street.jpg" alt="a talented artist" style="width: 400px;height: 200px;">
+        <img src="images/street.jpg" alt="a talented artist"/>
+        <br>
         <div>
             <a href="recipes/tag.html">Tag</a><br>
             <a href="recipes/throw.html">Throw</a><br>
