--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     
     <body>
         <h1 id="header">Graffiti recipes for OG's</h1>
-        <img src="images/street.jpg" alt="a talented artist"/>
+        <img src="images/street.jpg" alt="a talented artist">
         <br>
-        <div>
+        <div class="index">
             <a href="recipes/tag.html">Tag</a><br>
             <a href="recipes/throw.html">Throw</a><br>
             <a href="recipes/piece.html">Piece</a>
